# tarcrush

./: Cargo.toml  README.md
benches/bench-shingleprint/: main.rs
src/lib/: lib.rs  tunables.rs
src/lib/shingleprint/: hash.rs  mod.rs
src/lib/util/: k_smallest_unique.rs  mod.rs
wip/: README.txt  k_smallest_unique_avx2.rs  tar.rs
wip/ingress/: map.rs  mod.rs  read.rs
